--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 body {
-    background: linear-gradient(rgb(205, 190, 50), rgb(68, 128, 0));
-  }
-  .wrapper {
-    height: 100vh;
-    max-width: 1000px;
-    margin: auto;
-  }
+  /* background: #22c1c3; */
+  background: rgb(34,193,195);
+}
+
+.wrapper {
+  /* background: rgb(34,193,195); */
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+  height: 100vh;
+}
+
